@@ -40,6 +40,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 // Platform:
 
 // Common:
+#include "common/function_ref.hpp"
 #include "common/range.hpp"
 
 // External:
@@ -48,5 +49,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 void xlat_initialize();
 void Xlat(span<wchar_t> Data, unsigned long long Flags);
+void xlat_observe_tables(function_ref<void(wchar_t, wchar_t)> Observer);
 
 #endif // XLAT_HPP_F8CD041F_AB4B_42F8_B2AE_D117C0A8A848
