@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+drkns 20.06.2022 22:32:45 +0100 - build 5980
+
+1. Allow sourcing of keyboard mappings from xlat tables.
+
+2. Minor refactoring.
+
+--------------------------------------------------------------------------------
 drkns 12.06.2022 20:20:20 +0100 - build 5979
 
 1. 256 color palette support.
